--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "purgecss": "^5.0.0"
   },
   "scripts": {
-    "limpiacss" : "purgecss --css ./styles/css/bulma.css --content *.html --output ./styles/css/lightbulma.css"
+    "limpiacss": "purgecss --css ./styles/css/bulma.css --content *.html --output ./styles/css/lightbulma.css"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/araceliponce/araceliponce.github.io/issues"
   },
-  "homepage": "https://github.com/araceliponce/araceliponce.github.io#readme"
+  "homepage": "https://github.com/araceliponce/araceliponce.github.io#readme",
+  "dependencies": {
+    "theme-toggles": "^4.10.1"
+  }
 }
