.noise-container visible a partir de los 30 rem

--- a/_data/ui.yml
+++ b/_data/ui.yml
@@ -122,7 +122,7 @@ tools:
       - CSS3
       - Sass
       - JavaScript
-      - JQuery
+      #- JQuery
       - TypeScript
       - Liquid
     Dev Frameworks:
