--- a/_data/ui.yml
+++ b/_data/ui.yml
@@ -64,7 +64,7 @@ footer:
     copy: © Copyright MMXVIII. Designed and coded by [araceliponce](https://github.com/araceliponce). 
   es:
     title: Información de contacto
-    question: Quieres trabajar juntos? Solo envíame un correo. Te responderé en breve
+    question: ¿Quieres trabajar juntos? Solo envíame un correo. Te responderé en breve
     copy: © Copyright MMXVIII. Diseño y maquetación web por [araceliponce](https://github.com/araceliponce). 
 
 btns:
